# YDownloader

./: .dockerignore  .gitignore  Build.bat  Build.sh  Build_Vercel.sh  DockerRun.sh  Dockerfile  Jenkinsfile  MANIFEST.in  Run.sh  app.py  docker-compose.yml  dockerfile  package-lock.json  pyproject.toml  requirements.txt  setup.py  vercel.json  wsgi.py
api/: index.py
src/Api/: main.py  setup.md
src/client/: index.html  package-lock.json  package.json  vite.config.ts
src/client/src/: App.tsx
static/js/: index.js
static/styles/: tailwindcss.css
templates/: index.html  video.html
