[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-downloader"
version = "1.0.0"
description = "A YouTube video and audio downloader with metadata support"
authors = [
    {name = "Opyrus", email = "opyrusdeveloper@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["youtube", "downloader", "video", "audio", "mp3", "metadata"]
dependencies = [
    "flask",
    "pytubefix",
    "moviepy",
    "mutagen",
    "requests",
]

[project.scripts]
yt-downloader = "app:app.run"

[project.urls]
"Homepage" = "https://github.com/OpyrusDevOp/yt-downloader"
"Bug Reports" = "https://github.com/OpyrusDevOp/yt-downloader/issues"
